Initial Payments page added

--- a/client/templates/head.html
+++ b/client/templates/head.html
@@ -13,4 +13,5 @@
     After your sign up replace the key in the URL below..
     -->
     <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDQTpXj82d8UpCi97wzo_nKXL7nYrd4G70"></script>
+	<script src="https://js.braintreegateway.com/js/braintree-2.22.2.min.js"></script>
 </head>
