Calendar flying in appearance

--- a/client/templates/views/calendar/calendar.html
+++ b/client/templates/views/calendar/calendar.html
@@ -1,6 +1,7 @@
 <template name="calendar">
 
     {{> pageHeader title=getTitle desc=getDescription}}
+	{{#staggering}}
 
     <div class="content">
 
@@ -13,5 +14,5 @@
         </div>
 
     </div>
-
+	{{/staggering}}
 </template>
