Example user roles and Payments flow implemented

--- a/client/templates/views/payments/payments.html
+++ b/client/templates/views/payments/payments.html
@@ -1,8 +1,10 @@
 <template name="payments">
 
-	<form id="checkout" method="post" action="/checkout">
-	  <div id="payment-form"></div>
-	  <input type="submit" value="Pay $10">
-	</form>
+	<div class="container">
+		<form id="checkout" method="post" action="/checkout">
+			<div id="payment-form"></div>
+			<button type="submit" class="btn btn-success">Pay €15</button>
+		</form>
+	</div>
 	
 </template>
