--- a/client/templates/common/navigation.html
+++ b/client/templates/common/navigation.html
@@ -11,10 +11,18 @@
 
                     <div class="dropdown">
                         <a class="dropdown-toggle" href="#" data-toggle="dropdown">
-                            <small class="text-muted">{{_ "user_basic"}}<b class="caret"></b></small>
+							{{#if isInRole 'premium-user'}}
+                            <small class="text-muted">{{_ "user_premium"}}<b class="caret"></b></small>
+							{{else}}
+							<small class="text-muted">{{_ "user_basic"}}<b class="caret"></b></small>
+							{{/if}}
                         </a>
                         <ul class="dropdown-menu animated flipInX m-t-xs">
-                            <li><a href="{{pathFor route='register'}}">Registreeri Preemiumiks</a></li>
+							{{#if isInRole 'premium-user'}}
+                            <li><a href="{{pathFor route='downgrade'}}">Tagasi Tavakasutajaks</a></li>
+							{{else}}							
+							<li><a href="{{pathFor route='payments'}}">Registreeri Preemiumiks</a></li>
+							{{/if}}
                             <li><a href="{{pathFor route='profile'}}">Sinu profiil</a></li>
                             <li><a href="{{pathFor route='analytics'}}">Statistika</a></li>
                             <li class="divider"></li>
