--- a/client/templates/views/leagues/leagues.html
+++ b/client/templates/views/leagues/leagues.html
@@ -5,7 +5,7 @@
     {{#staggering}}
 
         <div class="content">
-	
+			 {{#if isInRole 'premium-user'}}
             <div class="row">
                 <div class="col-lg-12">
                 {{#panel title="Registreeri oma liiga" collapsed=true built=true}}
@@ -159,6 +159,7 @@
 				{{/panel}}
 				</div>
 			</div>
+		  {{/if}}
 
             <div class="row">
                 <div class="col-lg-12">
@@ -195,103 +196,16 @@
                                 </tr>
                                 </thead>
                                 <tbody>
+								{{#each leagues}}
                                 <tr>
-                                    <td>Mudaliiga</td>
-                                    <td>10</td>
-                                    <td>Karpo Korõtko</td>
-                                    <td>Privaatne</td>
-                                    <td>€500</td>
+                                    <td>{{ name }}</td>
+                                    <td>{{ members }}</td>
+                                    <td>{{ owner }}</td>
+                                    <td>{{ type }}</td>
+                                    <td>{{ pot }}</td>
                                     <td><button class="btn btn-warning">View</button>&nbsp;<button class="btn btn-success">Join</button></td>
                                 </tr>
-                                <tr>
-                                    <td>Rahvaliiga</td>
-                                    <td>100</td>
-                                    <td>Betfield</td>
-                                    <td>Avalik</td>
-                                    <td>€100</td>
-                                    <td><button class="btn btn-warning">View</button>&nbsp;<button class="btn btn-danger">Leave</button></td>
-                                </tr>
-								<tr>
-                                    <td>Võsaliiga</td>
-                                    <td>12</td>
-                                    <td>Priit Haasma</td>
-                                    <td>Private</td>
-                                    <td>€200</td>
-                                    <td><button class="btn btn-warning">View</button>&nbsp;<button class="btn btn-success">Join</button></td>
-                                </tr>
-								<tr>
-                                    <td>Meistriliiga</td>
-                                    <td>30</td>
-                                    <td>Karpo Korõtko</td>
-                                    <td>Private</td>
-                                    <td>€100</td>
-                                    <td><button class="btn btn-warning">View</button>&nbsp;<button class="btn btn-success">Join</button></td>
-                                </tr>
-								<tr>
-                                    <td>Mudaliiga</td>
-                                    <td>10</td>
-                                    <td>Karpo Korõtko</td>
-                                    <td>Private</td>
-                                    <td>€100</td>
-                                    <td><button class="btn btn-warning">View</button>&nbsp;<button class="btn btn-success">Join</button></td>
-                                </tr>
-								<tr>
-                                    <td>Mudaliiga</td>
-                                    <td>10</td>
-                                    <td>Karpo Korõtko</td>
-                                    <td>Private</td>
-                                    <td>€100</td>
-                                    <td><button class="btn btn-warning">View</button>&nbsp;<button class="btn btn-success">Join</button></td>
-                                </tr>
-								<tr>
-                                    <td>Mudaliiga</td>
-                                    <td>10</td>
-                                    <td>Karpo Korõtko</td>
-                                    <td>Private</td>
-                                    <td>€100</td>
-                                    <td><button class="btn btn-warning">View</button>&nbsp;<button class="btn btn-success">Join</button></td>
-                                </tr>
-								<tr>
-                                    <td>Mudaliiga</td>
-                                    <td>10</td>
-                                    <td>Karpo Korõtko</td>
-                                    <td>Private</td>
-                                    <td>€100</td>
-                                    <td><button class="btn btn-warning">View</button>&nbsp;<button class="btn btn-success">Join</button></td>
-                                </tr>
-								<tr>
-                                    <td>Mudaliiga</td>
-                                    <td>10</td>
-                                    <td>Karpo Korõtko</td>
-                                    <td>Private</td>
-                                    <td>€100</td>
-                                    <td><button class="btn btn-warning">View</button>&nbsp;<button class="btn btn-success">Join</button></td>
-                                </tr>
-								<tr>
-                                    <td>Mudaliiga</td>
-                                    <td>10</td>
-                                    <td>Karpo Korõtko</td>
-                                    <td>Private</td>
-                                    <td>€100</td>
-                                    <td><button class="btn btn-warning">View</button>&nbsp;<button class="btn btn-success">Join</button></td>
-                                </tr>
-								<tr>
-                                    <td>Mudaliiga</td>
-                                    <td>10</td>
-                                    <td>Karpo Korõtko</td>
-                                    <td>Private</td>
-                                    <td>€100</td>
-                                    <td><button class="btn btn-warning">View</button>&nbsp;<button class="btn btn-success">Join</button></td>
-                                </tr>
-								<tr>
-                                    <td>Mudaliiga</td>
-                                    <td>10</td>
-                                    <td>Karpo Korõtko</td>
-                                    <td>Private</td>
-                                    <td>€100</td>
-                                    <td><button class="btn btn-warning">View</button>&nbsp;<button class="btn btn-success">Join</button></td>
-                                </tr>
-
+								{{/each}}
                                 </tbody>
                                 <tfoot>
                                 <tr>
