Routes + user profile updates
Mängisin natukene routedega ja siis mudisin kasutaja profiili.

--- a/client/templates/views/appviews/profile.html
+++ b/client/templates/views/appviews/profile.html
@@ -66,8 +66,8 @@
                     <div class="hpanel">
 
                         <ul class="nav nav-tabs">
-                            <li class="active"><a data-toggle="tab" href="#tab-1">Project</a></li>
-                            <li class=""><a data-toggle="tab" href="#tab-2">Messages</a></li>
+                            <li class="active"><a data-toggle="tab" href="#tab-1">Minu Ennustused</a></li>
+                            <li class=""><a data-toggle="tab" href="#tab-2">Sõnumid</a></li>
                         </ul>
                         <div class="tab-content">
                             <div id="tab-1" class="tab-pane active">
@@ -83,170 +83,85 @@
                                             <tr>
 
                                                 <th>#</th>
-                                                <th>Project </th>
-                                                <th>Name </th>
-                                                <th>Phone </th>
-                                                <th>Company </th>
-                                                <th>Completed </th>
-                                                <th>Task</th>
-                                                <th>Date</th>
-                                                <th>Action</th>
+                                                <th>Date </th>
+                                                <th>Home </th>
+                                                <th>Away </th>
+                                                <th>Group </th>
+                                                <th>Score </th>
                                             </tr>
                                             </thead>
                                             <tbody>
                                             <tr>
                                                 <td>1</td>
-                                                <td>Project <small>This is example of project</small></td>
-                                                <td>Patrick Smith</td>
-                                                <td>0800 051213</td>
-                                                <td>Inceptos Hymenaeos Ltd</td>
-                                                <td><span class="pie">2/45</span></td>
-                                                <td>20%</td>
-                                                <td>Jul 14, 2013</td>
-                                                <td><a href="#"><i class="fa fa-check text-success"></i></a></td>
+                                                <td>11.06.2016 18:00</td>
+												<td>Saksamaa</td>
+												<td>Poola</td>
+												<td>Grupp A</td>
+												<td>2:0</td>
                                             </tr>
                                             <tr>
                                                 <td>2</td>
-                                                <td>Alpha project</td>
-                                                <td>Alice Jackson</td>
-                                                <td>0500 780909</td>
-                                                <td>Nec Euismod In Company</td>
-                                                <td><span class="pie">1/5</span></td>
-                                                <td>40%</td>
-                                                <td>Jul 16, 2013</td>
-                                                <td><a href="#"><i class="fa fa-check text-success"></i></a></td>
+                                                <td>11.06.2016 18:00</td>
+												<td>Saksamaa</td>
+												<td>Poola</td>
+												<td>Grupp A</td>
+												<td>2:0</td>
                                             </tr>
                                             <tr>
                                                 <td>3</td>
-                                                <td>Betha project</td>
-                                                <td>John Smith</td>
-                                                <td>0800 1111</td>
-                                                <td>Erat Volutpat</td>
-                                                <td><span class="pie">4/7</span></td>
-                                                <td>75%</td>
-                                                <td>Jul 18, 2013</td>
-                                                <td><a href="#"><i class="fa fa-check text-success"></i></a></td>
+                                               <td>11.06.2016 18:00</td>
+												<td>Saksamaa</td>
+												<td>Poola</td>
+												<td>Grupp A</td>
+												<td>2:0</td>
                                             </tr>
                                             <tr>
                                                 <td>4</td>
-                                                <td>Gamma project</td>
-                                                <td>Anna Jordan</td>
-                                                <td>(016977) 0648</td>
-                                                <td>Tellus Ltd</td>
-                                                <td><span class="pie">12/3</span></td>
-                                                <td>18%</td>
-                                                <td>Jul 22, 2013</td>
-                                                <td><a href="#"><i class="fa fa-check text-success"></i></a></td>
+                                               <td>11.06.2016 18:00</td>
+												<td>Saksamaa</td>
+												<td>Poola</td>
+												<td>Grupp A</td>
+												<td>2:0</td>
                                             </tr>
                                             <tr>
                                                 <td>2</td>
-                                                <td>Alpha project</td>
-                                                <td>Alice Jackson</td>
-                                                <td>0500 780909</td>
-                                                <td>Nec Euismod In Company</td>
-                                                <td><span class="pie">2/5</span></td>
-                                                <td>40%</td>
-                                                <td>Jul 16, 2013</td>
-                                                <td><a href="#"><i class="fa fa-check text-success"></i></a></td>
+                                               <td>11.06.2016 18:00</td>
+												<td>Saksamaa</td>
+												<td>Poola</td>
+												<td>Grupp A</td>
+												<td>2:0</td>
                                             </tr>
                                             <tr>
                                                 <td>1</td>
-                                                <td>Project <small>This is example of project</small></td>
-                                                <td>Patrick Smith</td>
-                                                <td>0800 051213</td>
-                                                <td>Inceptos Hymenaeos Ltd</td>
-                                                <td><span class="pie">1/5</span></td>
-                                                <td>20%</td>
-                                                <td>Jul 14, 2013</td>
-                                                <td><a href="#"><i class="fa fa-check text-success"></i></a></td>
+                                                <td>11.06.2016 18:00</td>
+												<td>Saksamaa</td>
+												<td>Poola</td>
+												<td>Grupp A</td>
+												<td>2:0</td>
                                             </tr>
                                             <tr>
                                                 <td>4</td>
-                                                <td>Gamma project</td>
-                                                <td>Anna Jordan</td>
-                                                <td>(016977) 0648</td>
-                                                <td>Tellus Ltd</td>
-                                                <td><span class="pie">2/8</span></td>
-                                                <td>18%</td>
-                                                <td>Jul 22, 2013</td>
-                                                <td><a href="#"><i class="fa fa-check text-success"></i></a></td>
+                                              <td>11.06.2016 18:00</td>
+												<td>Saksamaa</td>
+												<td>Poola</td>
+												<td>Grupp A</td>
+												<td>2:0</td>
                                             </tr>
                                             <tr>
                                                 <td>1</td>
-                                                <td>Project <small>This is example of project</small></td>
-                                                <td>Patrick Smith</td>
-                                                <td>0800 051213</td>
-                                                <td>Inceptos Hymenaeos Ltd</td>
-                                                <td><span class="pie">15/5</span></td>
-                                                <td>20%</td>
-                                                <td>Jul 14, 2013</td>
-                                                <td><a href="#"><i class="fa fa-check text-success"></i></a></td>
+                                               <td>11.06.2016 18:00</td>
+												<td>Saksamaa</td>
+												<td>Poola</td>
+												<td>Grupp A</td>
+												<td>2:0</td>
                                             </tr>
                                             <tr>
                                                 <td>2</td>
-                                                <td>Alpha project</td>
-                                                <td>Alice Jackson</td>
-                                                <td>0500 780909</td>
-                                                <td>Nec Euismod In Company</td>
-                                                <td><span class="pie">2/3</span></td>
-                                                <td>40%</td>
-                                                <td>Jul 16, 2013</td>
-                                                <td><a href="#"><i class="fa fa-check text-success"></i></a></td>
-                                            </tr>
-                                            <tr>
-                                                <td>3</td>
-                                                <td>Betha project</td>
-                                                <td>John Smith</td>
-                                                <td>0800 1111</td>
-                                                <td>Erat Volutpat</td>
-                                                <td><span class="pie">4/5</span></td>
-                                                <td>75%</td>
-                                                <td>Jul 18, 2013</td>
-                                                <td><a href="#"><i class="fa fa-check text-success"></i></a></td>
-                                            </tr>
-                                            <tr>
-                                                <td>4</td>
-                                                <td>Gamma project</td>
-                                                <td>Anna Jordan</td>
-                                                <td>(016977) 0648</td>
-                                                <td>Tellus Ltd</td>
-                                                <td><span class="pie">2/12</span></td>
-                                                <td>18%</td>
-                                                <td>Jul 22, 2013</td>
-                                                <td><a href="#"><i class="fa fa-check text-success"></i></a></td>
-                                            </tr>
-                                            <tr>
-                                                <td>2</td>
-                                                <td>Alpha project</td>
-                                                <td>Alice Jackson</td>
-                                                <td>0500 780909</td>
-                                                <td>Nec Euismod In Company</td>
-                                                <td><span class="pie">2/3</span></td>
-                                                <td>40%</td>
-                                                <td>Jul 16, 2013</td>
-                                                <td><a href="#"><i class="fa fa-check text-success"></i></a></td>
-                                            </tr>
-                                            <tr>
-                                                <td>1</td>
-                                                <td>Project <small>This is example of project</small></td>
-                                                <td>Patrick Smith</td>
-                                                <td>0800 051213</td>
-                                                <td>Inceptos Hymenaeos Ltd</td>
-                                                <td><span class="pie">1/5</span></td>
-                                                <td>20%</td>
-                                                <td>Jul 14, 2013</td>
-                                                <td><a href="#"><i class="fa fa-check text-success"></i></a></td>
-                                            </tr>
-                                            <tr>
-                                                <td>4</td>
-                                                <td>Gamma project</td>
-                                                <td>Anna Jordan</td>
-                                                <td>(016977) 0648</td>
-                                                <td>Tellus Ltd</td>
-                                                <td><span class="pie">10/50</span></td>
-                                                <td>18%</td>
-                                                <td>Jul 22, 2013</td>
-                                                <td><a href="#"><i class="fa fa-check text-success"></i></a></td>
+                                              <td>11.06.2016 18:00</td>
+												<td>Saksamaa</td>
+												<td>Poola</td>
+												<td>Grupp A</td>
+												<td>2:0</td>
                                             </tr>
                                             </tbody>
                                         </table>
