--- a/client/templates/views/commonviews/login.html
+++ b/client/templates/views/commonviews/login.html
@@ -30,7 +30,7 @@
                                 <p class="help-block small">({{_ "login_password_remember_small"}})</p>
                             </div>
                             <button class="btn btn-success btn-block">{{_ "login"}}</button>
-                            <a class="btn btn-default btn-block" href="#">{{_ "register"}}</a>
+                            <a class="btn btn-default btn-block" href="/register">{{_ "register"}}</a>
                         </form>
                     </div>
                 </div>
