--- a/client/templates/views/commonviews/register.html
+++ b/client/templates/views/commonviews/register.html
@@ -42,7 +42,7 @@
                             </div>
                             <div class="text-center">
                                 <button class="btn btn-success">{{_ "register_button"}}</button>
-                                <button class="btn btn-default">{{_ "register_cancel"}}</button>
+                                <a class="btn btn-default" href="/landingPage">{{_ "register_cancel"}}</a>
                             </div>
                         </form>
                     </div>
