--- a/client/templates/views/landing/landing-page.html
+++ b/client/templates/views/landing/landing-page.html
@@ -42,7 +42,7 @@
                 <p class="small">
                     Lorem Ipsum is simply dummy text of the printing and tLorem Ipsum is  Lorem Ipsum is simply dummy of the simply dummy text of the ypesetting.
                 </p>
-                <a href="#" class="btn btn-success btn-sm">Learn more</a>
+                <a href="/login" class="btn btn-success btn-sm">Logi sisse</a>
             </div>
             {{#staggering child="img-animate" effect="fadeInRight"}}
             <div class="heading-image">
