--- a/client/templates/views/commonviews/login.html
+++ b/client/templates/views/commonviews/login.html
@@ -1,7 +1,7 @@
 <template name="login">
 
     <div class="back-link">
-        <a href="{{pathFor route='landingPage'}}" class="btn btn-primary">{{_ "login_back_home"}}</a>
+        <a href="{{pathFor route='root'}}" class="btn btn-primary">{{_ "login_back_home"}}</a>
     </div>
 
     <div class="login-container">
@@ -13,15 +13,15 @@
                 </div>
                 <div class="hpanel">
                     <div class="panel-body">
-                        <form action="#" id="loginForm">
+                        <form action="/dashboard" id="loginForm">
                             <div class="form-group">
                                 <label class="control-label" for="username">{{_ "login_username"}}</label>
-                                <input type="text" placeholder={{_ "login_email"}} title={{_ "login_email_title"}} required="" value="" name="username" id="username" class="form-control">
+                                <input type="email" placeholder={{_ "login_email"}} title={{_ "login_email_title"}} required value="" name="username" id="username" class="form-control">
                                 <span class="help-block small">{{_ "login_username_small"}}</span>
                             </div>
                             <div class="form-group">
                                 <label class="control-label" for="password">{{_ "login_password"}}</label>
-                                <input type="password" title={{_ "login_password_title"}} placeholder="******" required="" value="" name="password" id="password" class="form-control">
+                                <input type="password" title={{_ "login_password_title"}} placeholder="******" required value="" name="password" id="password" class="form-control">
                                 <span class="help-block small">{{_ "login_password_small"}}</span>
                             </div>
                             <div class="checkbox">
