--- a/client/templates/views/commonviews/register.html
+++ b/client/templates/views/commonviews/register.html
@@ -1,7 +1,7 @@
 <template name="register">
 
     <div class="back-link">
-        <a href="{{pathFor route='dashboard'}}" class="btn btn-primary">{{_ "register_back_home"}}</a>
+        <a href="{{pathFor route='root'}}" class="btn btn-primary">{{_ "register_back_home"}}</a>
     </div>
 
     <div class="register-container">
@@ -13,36 +13,40 @@
                 </div>
                 <div class="hpanel">
                     <div class="panel-body">
-                        <form action="#" id="loginForm">
+                        <form action="#" id="registerForm">
                             <div class="row">
-                                <div class="form-group col-lg-12">
-                                    <label>{{_ "register_username"}}</label>
-                                    <input type="" value="" id="" class="form-control" name="">
+                                <div class="form-group col-lg-6">
+                                    <label>{{_ "register_firstname"}}</label>
+                                    <input type="text" value="" id="first-name" class="form-control" name="first-name" required>
+                                </div>
+                                <div class="form-group col-lg-6">
+                                    <label>{{_ "register_lastname"}}</label>
+                                    <input type="text" value="" id="last-name" class="form-control" name="last-name" required>
                                 </div>
                                 <div class="form-group col-lg-6">
                                     <label>{{_ "register_pw"}}</label>
-                                    <input type="password" value="" id="" class="form-control" name="">
+                                    <input type="password" value="" id="password" class="form-control" name="password" required>
                                 </div>
                                 <div class="form-group col-lg-6">
                                     <label>{{_ "register_pw_repeat"}}</label>
-                                    <input type="password" value="" id="" class="form-control" name="">
+                                    <input type="password" value="" id="password-repeat" class="form-control" name="password-repeat" required>
                                 </div>
                                 <div class="form-group col-lg-6">
                                     <label>{{_ "register_email"}}</label>
-                                    <input type="" value="" id="" class="form-control" name="">
+                                    <input type="email" value="" id="email" class="form-control" name="email" required>
                                 </div>
                                 <div class="form-group col-lg-6">
                                     <label>{{_ "register_email_repeat"}}</label>
-                                    <input type="" value="" id="" class="form-control" name="">
+                                    <input type="email" value="" id="email-repeat" class="form-control" name="email-repeat" required>
                                 </div>
                                 <div class="checkbox col-lg-12">
-                                    <input type="checkbox" class="i-checks" checked>
-                                    {{_ "register_subscribe"}}
+                                    <input type="checkbox" class="i-checks" checked required>
+                                    {{_ "register_agree_terms"}}
                                 </div>
                             </div>
                             <div class="text-center">
                                 <button class="btn btn-success">{{_ "register_button"}}</button>
-                                <a class="btn btn-default" href="/landingPage">{{_ "register_cancel"}}</a>
+                                <a class="btn btn-default" href="/">{{_ "register_cancel"}}</a>
                             </div>
                         </form>
                     </div>
