--- a/client/templates/views/commonviews/register.html
+++ b/client/templates/views/commonviews/register.html
@@ -46,7 +46,7 @@
                             </div>
                             <div class="text-center">
                                 <button class="btn btn-success">{{_ "register_button"}}</button>
-                                <a class="btn btn-default" href="/">{{_ "register_cancel"}}</a>
+                                <a class="btn btn-default" href="/login">{{_ "register_cancel"}}</a>
                             </div>
                         </form>
                     </div>
