--- a/client/templates/views/commonviews/login.html
+++ b/client/templates/views/commonviews/login.html
@@ -39,8 +39,10 @@
 		<div class="row">
             <div class="col-md-12 text-center">
                 <button id="fb-login" class="btn btn-facebook"><i class="fa fa-facebook"></i> | {{_ "login"}}</button>
+                <button id="google-login" class="btn btn-google"> <i class="fa fa-google"></i> | {{_ "login"}}</button>
             </div>
         </div>
+        <br>
         <div class="row">
             <div class="col-md-12 text-center">
                 {{_ "copyright"}}
