--- a/client/stylesheets/style.less
+++ b/client/stylesheets/style.less
@@ -14,8 +14,8 @@
 
 // Additional colors
 @color-text: #6a6c6f;
-@color-bright: #F0F0F5;
-@color-background: #f1f3f6;
+@color-bright: #F3F8FE;
+@color-background: #F0F5FB;
 @color-background-boxed: lighten(@color-background, 3%);
 @border-color: #e4e5e7;
 
@@ -54,6 +54,7 @@
 @import "globals/forum.import.less";
 @import "globals/mailbox.import.less";
 @import "globals/loader.import.less";
+@import "globals/betfield.import.less";
 
 // Styles for landing page
 @import "globals/landing.import.less";
