--- a/client/templates/views/predictions/predictions.html
+++ b/client/templates/views/predictions/predictions.html
@@ -15,29 +15,31 @@
 										<h1>Ennustused</h1>
 									</div>   
 									<div class="fc-right">
-										<div class="fc-button-group">
-											<button type="button" class="fc-button fc-state-default fc-corner-left fc-state-active">Group A</button>
-											<button type="button" class="fc-button fc-state-default">Group B</button>
-											<button type="button" class="fc-button fc-state-default">Group C</button>
-											<button type="button" class="fc-button fc-state-default">Group D</button>
-											<button type="button" class="fc-button fc-state-default">Group E</button>
-											<button type="button" class="fc-button fc-state-default">Group F</button>
-											<button type="button" class="fc-button fc-state-default fc-corner-right">All Matches</button>
+										<div class="group-select fc-button-group">
+											<button id="A" type="button" class="fc-button fc-state-default fc-corner-left fc-state-active">Group A</button>
+											<button id="B" type="button" class="fc-button fc-state-default">Group B</button>
+											<button id="C" type="button" class="fc-button fc-state-default">Group C</button>
+											<button id="D" type="button" class="fc-button fc-state-default">Group D</button>
+											<button id="E" type="button" class="fc-button fc-state-default">Group E</button>
+											<button id="F" type="button" class="fc-button fc-state-default">Group F</button>
+											<button id="ALL" type="button" class="fc-button fc-state-default fc-corner-right">All Matches</button>
 										</div>
 									</div>
 								</div>
 							</div>
                             <table id="predictions" class="footable table" data-page-size="100" data-filter=#filter>
                                 <thead>
-                                <tr>
-                                    <th data-class="bf-table-date" class="bf-center">Date</th>
-                                    <th data-class="bf-table-home" class="bf-right">Home</th>
-									<th data-class="bf-table-vs" data-sort-ignore="true"></th>
-                                    <th data-class="bf-table-away" class="bf-left">Away</th>
-                                    <th data-class="bf-table-group" class="bf-center">Group</th>
-                                    <th data-class="bf-table-score" data-sort-ignore="true" class="bf-center">Score</th>
-                                </tr>
+									<tr>
+										<th data-class="bf-table-date" class="bf-center">Date</th>
+										<th data-class="bf-table-home" class="bf-right">Home</th>
+										<th data-class="bf-table-vs" data-sort-ignore="true"></th>
+										<th data-class="bf-table-away" class="bf-left">Away</th>
+										<th data-class="bf-table-group" class="bf-center">Group</th>
+										<th data-class="bf-table-score" data-sort-ignore="true" class="bf-center">Score</th>
+									</tr>
                                 </thead>
+								<tbody id="pred-body">
+								</tbody>	
                             </table>
 
                         </div>
