Predictions page update to include score inputs and data per user

--- a/client/stylesheets/globals/betfield.import.less
+++ b/client/stylesheets/globals/betfield.import.less
@@ -67,4 +67,18 @@
     text-align:center;
 }
 
+.bf-table-score input {
+    width: 2em;
+    text-align: center;
+}
+
+/* remove the spinner */
+.input-no-spinner::-webkit-outer-spin-button, .input-no-spinner::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+.bf-table-submit {
+    font-size: 18px;
+}
 // ----------------------------
