--- a/client/templates/views/predictions/predictions.html
+++ b/client/templates/views/predictions/predictions.html
@@ -38,6 +38,18 @@
 										<th data-class="bf-table-score" data-sort-ignore="true" class="bf-center">Score</th>
 									</tr>
                                 </thead>
+								<tfoot>
+									<tr>
+										<td></td>
+										<td></td>
+										<td></td>
+										<td></td>
+										<td></td>
+										<td align="middle">
+											<button id="pred-submit" type="button" class="btn btn-success bf-table-submit">Submit</button>
+										</td>
+									</tr>
+								</tfoot>
 								<tbody id="pred-body">
 								</tbody>	
                             </table>
